asm_tests/other_testfiles/invalid_files/error62.s
.name "MORO"
.comment "MORJESTA!"

kissa: 
		sub r1,r1,r1
		lfork x%:kissa
